# erez-video-assistant

./: .env.dev.example  .env.example  .gitignore  CLAUDE.md  Makefile  Procfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
app/: bot.py  config.py  ideas.py  jobs.py  main.py
app/analyze/: fetch.py  gemini.py
app/collect/: base.py  youtube.py
app/digest/: compose.py  page.py  rank.py
app/notify/: base.py  telegram.py
app/store/: db.py  usage.py  videos.py
config/: settings.yaml  watchlist.yaml
docs/: erez-top5.md  follow-ups.md  good-first-issues.md  operations.md  viral-examples.md
docs/learn/: 01-what-is-this.md  02-the-prompts-are-yours.md  03-your-first-code.md
docs/superpowers/plans/: 2026-07-14-phase-1-digest-and-analysis.md  2026-07-22-trend-radar-and-deep-analysis.md
docs/superpowers/specs/: 2026-07-14-erez-video-assistant-direction-design.md
prompts/: analysis_rubric.md  bot_persona.md  digest.md  ideas.md
tests/: test_bot.py  test_collect.py  test_compose.py  test_config.py  test_costs.py  test_fetch.py  test_gemini.py  test_ideas.py  test_jobs.py  test_page.py  test_rank.py  test_smoke.py  test_store.py
tests/fixtures/: analysis_sample.json  digest_items.json  youtube_search.json
web/: template.html
